cmake_minimum_required(VERSION 3.13)
project(design_patterns)

set(CMAKE_CXX_STANDARD 14)

add_executable(design_patterns main.cpp StrategyPattern/WeaponBehavior.h StrategyPattern/BlasterBehavior.cpp StrategyPattern/BlasterBehavior.h StrategyPattern/LightSaberBehavior.cpp StrategyPattern/LightSaberBehavior.h StrategyPattern/CrossBowBehavior.cpp StrategyPattern/CrossBowBehavior.h StrategyPattern/StarWarsCharacter.cpp StrategyPattern/StarWarsCharacter.h FactoryMethodPattern/Burger.h FactoryMethodPattern/McDonaldsBurger.h FactoryMethodPattern/McDonaldsCheeseBurger.h FactoryMethodPattern/WendysBurger.h FactoryMethodPattern/WendysCheeseBurger.h FactoryMethodPattern/Burger.cpp FactoryMethodPattern/BurgerFactory.cpp FactoryMethodPattern/BurgerFactory.h FactoryMethodPattern/McDonaldsFactory.cpp FactoryMethodPattern/McDonaldsFactory.h FactoryMethodPattern/WendysFactory.cpp FactoryMethodPattern/WendysFactory.h)